feat(interpreter): implement native observer pattern and error stringification
- Replace fragile proxy-based wrappers with native `__active_listeners__` injection for POO instances.
- Inject `target` and `targetName` context into listener instances for deep state introspection and rules validation.
- Clean up legacy auto-triggering hooks in `visitGetExpr` and `visitSetExpr` to prevent infinite recursion/loops.
- Add native `toString()` method to `ErrorNativeModel` to properly format error outputs.
- Update top-level exception handling in `Interpreter.interpret` to cleanly display uncaught error messages.